      provided for the class mefa. For the
      stcs class, methods for data frames can
      be used (because an stcs object is
      essentially a data frame with some
      conventions and additional attributes).
    * The melt method is provided to convert
      a mefa object into stcs, or redefine
      new segments.
    * dim and dimnames methods also available
      for mefa objects.


Version 1.1-4 -- September 20, 2008 (closed)

    * inflate: arguments of any() corrected


Version 1.1-3 -- September 15, 2008 (closed)

    * citation entry added


Version 1.1-2 -- June 24, 2008 (closed)

    * several minor fixes in .Rd files
    * xytrend moved to sedar
    * preliminary modifications made according to later
      introduction of 'list' objects
    * report as generic function added for methods
    * as.mefa added
    * startup message is added


Version 1.1-1 -- June 12, 2008 (closed)
                 April 02, 2008 (started)

	* accumulate was rewritten
	* vignette is corrected and updated
	* help pages are corrected and updated


Version 1.1-0 -- March 14, 2008

	* vignette is made available
	  and can be used as reference for the
	  dolina demo
	* add.attrib can now handle mefa objects
	  containing NULL attribute table
	* logscale argument inserted into plot methods
	* cutoff argument inserted into print methods
	* report.mefa bug fixed & help corrected
	* new functions: qdef, mapmf, accumulate,
	  ivgen, xytrend
	* mefa from now depends on other packages
	  (xytrend requires vegan)
	* mefa developement is now on R-Forge


Version 1.0-4 -- February 11, 2008

	* the demo was rewritten
	  (and still under construction...)
	* amf function is provided
	* class definitions are rewritten
	* print and plot S3 methods provided for classes
	* digits argument is placed into sscount 
	  and related functions


Version 1.0-3 -- January 4, 2008

	* mefa object can be used in function as.xcount
	* default setting of index argument
	  in add.attrib was changed